# csv2xls

./: .clang-format  .gitignore  .travis.yml  BUILD_SPECIAL.md  CMakeLists.txt  Changelog.md  Changelog.txt  INSTALL.TXT  Jenkinsfile  Makefile.am  Makefile.in  README.TXT  README.md  ToDo.TXT  appveyor.yml  autoclean.sh  bootstrap.sh  configure  configure.ac  csv2xls.cpp  index.html  mingwbuild.sh  mkversion.sh  params.json  requirement.txt  types.sed
.github/workflows/: cmake.yml
arch_linux/: README.TXT
cmake/modules/: CTestConfig.cmake  CppFunComp.cmake  CppResultType.cmake  CppSkilledType.cmake  GetVersionFromGitTag.cmake  MunkeiVersionFromGit.cmake  Toolchain-mingw.cmake  catch2.cmake  checkedcmd.cmake  clara.cmake  codechecker.cmake  doctest.cmake  libcsv.cmake  msvc_cplusplus.cmake  version.cpp.in  warnings.cmake  xlslib.cmake
cmake/scripts/: generate_compile_commands_for_codechecker.sh
csv2xlslib/: CMakeLists.txt  Helpers.h  MatchVariantType.h  OutPutDoc.cpp  OutPutDoc.h  OutPutDoc.hpp  OutputDoc.cpp  OutputDoc.hpp  SkilledType.h  TypeSafeSkillSet.h  XlsFile.cpp  XlsFile.hpp  XlsWorkBook.cpp  XlsWorkBook.hpp  callback.cpp  callback.hpp  conversion.h  convertCsv.cpp  convertCsv.h  crtp.h  csv.cpp  csv.hpp  csv2xls_compound_types.cpp  csv2xls_compound_types.h  csv2xls_skills.h  csv2xls_types.cpp  csv2xls_types.h  default_values.h  filename.cpp  filename.hpp  funcomp.h  memory.cpp  memory.hpp  parseCsvFile.cpp  parseCsvFile.hpp  parseCsvStream.cpp  parseCsvStream.hpp  parsecmd.cpp  parsecmd.hpp  print_help.cpp  (+9 more)
csv2xlslib.Test/: CMakeLists.txt  OutputFileNameTest.cpp  ReadCellTest.cpp  TestHelper.h  TypeSafeSkillSetTest.cpp  XlsFileTest.cpp  conversionTest.cpp  convertCsvTest.cpp  filenameTest.cpp  funcompTest.cpp  parseCsvStreamTest.cpp  parsecmdTest.cpp
doc/: CMakeLists.txt  Makefile.am  Makefile.in  csv2xls.1
mac/: README.txt
misc/: appveyorTestRunScript.bat
samples/: numbers.csv  numbers_tab.csv  test.csv  utf8_tab.csv
src/: Makefile.am  Makefile.in  XlsFile.cpp  XlsFile.hpp  callback.cpp  callback.hpp  csv.cpp  csv.hpp  csv2xls.cpp  default_values.h  filename.cpp  filename.hpp  memory.cpp  memory.hpp  parseCsvFile.cpp  parseCsvFile.hpp  parsecmd.cpp  parsecmd.hpp  print_help.cpp  print_help.h  readHeadLine.cpp  readHeadLine.hpp  str2ulong.cpp  str2ulong.hpp  version.h  workbook.hpp  xls_workbook.cpp  xls_workbook.hpp  xlslib.hpp
testing/: Makefile.am  Makefile.in  TestMain.cpp  XlsFileTest.cpp  XlsFileTest.hpp  filenameTest.cpp  filenameTest.hpp  mkTest.sh  parsecmdTest.cpp  parsecmdTest.hpp  str2ulongTest.cpp  str2ulongTest.hpp  testfunction.sh
testing/Dummy/: DummyTest.cpp  DummyTest.hpp  DummyTestMain.cpp  makefile.mk
testing/XlsFile/: XlsFileTest.cpp  XlsFileTest.hpp  XlsFileTestMain.cpp  XlsFileTestMain.h  XlsFileTestMain.sh  makefile.mk
testing/filename/: filenameTest.cpp  filenameTest.hpp  filenameTestMain.cpp  filenameTestMain.h  makefile.mk
testing/parsecmd/: makefile.mk  parsecmdTest.cpp  parsecmdTestMain.cpp
testing/str2ulong/: makefile.mk  str2ulongTest.cpp  str2ulongTestMain.cpp
