AC_INIT([csv2xls], [0.1], [Marcel.Schneider@coopmasters.de])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CXX
#AM_PROG_AR
#LT_INIT([disable-static])
#LT_INIT()
#AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile  src/Makefile testing/Makefile doc/Makefile])
AC_OUTPUT
